experiments/m2b_results/logs/m2b_nsa-L2048-lr3.2e-04.log
[cost] L=  128  nblk=   8  g=  3  hier_pairs/q=   9  vs  nsa_pairs/q=   8  (0.9x cheaper)
[cost] L=  128  nblk=   8  g=  3  hier_pairs/q=   9  vs  nsa_pairs/q=   8  (0.9x cheaper)
[cost] L=  128  nblk=   8  g=  3  hier_pairs/q=   9  vs  nsa_pairs/q=   8  (0.9x cheaper)
[cost] L=  512  nblk=  32  g=  6  hier_pairs/q=  18  vs  nsa_pairs/q=  32  (1.8x cheaper)
[cost] L=  512  nblk=  32  g=  6  hier_pairs/q=  18  vs  nsa_pairs/q=  32  (1.8x cheaper)
[cost] L=  512  nblk=  32  g=  6  hier_pairs/q=  18  vs  nsa_pairs/q=  32  (1.8x cheaper)
[cost] L= 2048  nblk= 128  g= 11  hier_pairs/q=  34  vs  nsa_pairs/q= 128  (3.8x cheaper)
[cost] L= 2048  nblk= 128  g= 11  hier_pairs/q=  34  vs  nsa_pairs/q= 128  (3.8x cheaper)
[cost] L= 2048  nblk= 128  g= 11  hier_pairs/q=  34  vs  nsa_pairs/q= 128  (3.8x cheaper)
[shard] 0/1 only=nsa-L2048-lr3.2e-04 -> running 1 configs on this process
[cost] L=  128  nblk=   8  g=  3  hier_pairs/q=   9  vs  nsa_pairs/q=   8  (0.9x cheaper)
[cost] L=  128  nblk=   8  g=  3  hier_pairs/q=   9  vs  nsa_pairs/q=   8  (0.9x cheaper)
[cost] L=  128  nblk=   8  g=  3  hier_pairs/q=   9  vs  nsa_pairs/q=   8  (0.9x cheaper)
[cost] L=  512  nblk=  32  g=  6  hier_pairs/q=  18  vs  nsa_pairs/q=  32  (1.8x cheaper)
[cost] L=  512  nblk=  32  g=  6  hier_pairs/q=  18  vs  nsa_pairs/q=  32  (1.8x cheaper)
[cost] L=  512  nblk=  32  g=  6  hier_pairs/q=  18  vs  nsa_pairs/q=  32  (1.8x cheaper)
[cost] L= 2048  nblk= 128  g= 11  hier_pairs/q=  34  vs  nsa_pairs/q= 128  (3.8x cheaper)
[cost] L= 2048  nblk= 128  g= 11  hier_pairs/q=  34  vs  nsa_pairs/q= 128  (3.8x cheaper)
[cost] L= 2048  nblk= 128  g= 11  hier_pairs/q=  34  vs  nsa_pairs/q= 128  (3.8x cheaper)
[shard] 0/1 only=nsa-L2048-lr3.2e-04 -> running 1 configs on this process
No logger specified, skipping...
TrainConfig(
    data=DataConfig(
        train_configs=[
            MQARConfig(
                vocab_size=8192,
                num_examples=20000,
                input_seq_len=2048,
                name='multiquery_ar',
                power_a=0.01,
                num_kv_pairs=128,
                random_non_queries=True,
                include_slices=True
            )
        ],
        test_configs=[
            MQARConfig(
                vocab_size=8192,
                num_examples=2000,
                input_seq_len=2048,
                name='multiquery_ar',
                power_a=0.01,
                num_kv_pairs=128,
                random_non_queries=True,
                include_slices=True
            )
        ],
        batch_size=16,
        seed=123,
        cache_dir='/content/zoology_cache',
        force_cache=False,
        num_passes=1
    ),
    model=ModelConfig(
        sequence_mixer=ModuleConfig(
            name='zoology.mixers.deepseek_nsa.SparseAttention',
            kwargs={
                'num_heads': 4,
                'sliding_window_size': 32,
                'compress_block_size': 16,
                'selection_block_size': 16,
                'num_selected_blocks': 4,
                'causal': True
            }
        ),
        state_mixer=ModuleConfig(
            name='zoology.mixers.mlp.MLP',
            kwargs={'hidden_mult': 4}
        ),
        d_model=128,
        n_layers=2,
        multiplier=1,
        max_position_embeddings=2048,
        learnable_word_embeddings=True,
        embedding_init_type='default',
        vocab_size=8192,
        resid_dropout=0.0,
        embed_dropout=0.1,
        drop_path=0.0,
        layer_norm_epsilon=1e-05,
        pad_vocab_size_multiple=1,
        block_type='TransformerBlock',
        name='default'
    ),
    logger=LoggerConfig(project_name=None, entity=None),
    max_epochs=100,
    loss_type='ce',
    input_type='discrete',
    early_stopping_metric='valid/accuracy',
    early_stopping_threshold=0.98,
    slice_keys=[],
    learning_rate=0.00031622776601683794,
    weight_decay=0.1,
    seed=123,
    launch_id='shard0-2026-07-06-07-25-50',
    sweep_id=None,
    run_id='nsa-L2048-lr3.2e-04'
)
Traceback (most recent call last):
  File "/kaggle/working/ssa-recall/experiments/m2b_hier_frontier.py", line 130, in <module>
    train(config)
  File "/kaggle/working/zoology/zoology/train.py", line 241, in train
    model = LanguageModel(config.model)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/kaggle/working/zoology/zoology/model.py", line 310, in __init__
    self.backbone = LMBackbone(config=config)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/kaggle/working/zoology/zoology/model.py", line 243, in __init__
    block_cls(config=config, layer_idx=i)
  File "/kaggle/working/zoology/zoology/model.py", line 190, in __init__
    self.sequence_mixer = config.sequence_mixer.instantiate(
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/kaggle/working/zoology/zoology/config.py", line 65, in instantiate
    return import_from_str(self.name)(**kwargs, **self.kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/kaggle/working/zoology/zoology/utils.py", line 18, in import_from_str
    module = __import__(module_name, fromlist=[obj_name])
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/kaggle/working/zoology/zoology/mixers/deepseek_nsa.py", line 241
    if not self.query_heads_share_selected_kv:
IndentationError: unexpected indent
[FAIL] nsa-L2048-lr3.2e-04 exited 1 (OOM or crash) — continuing
